# OCRL-Project

./: README.md  VMC.m  myfile.m
Part/: leg1.SLDPRT  leg2.SLDPRT  mainframe.SLDPRT  tire.SLDPRT
SW/: 4010电机.SLDPRT  endwheel12.SLDPRT  largearm1.SLDPRT  largearm3.SLDPRT  largearm4.SLDPRT  大腿垫高.SLDPRT  大腿垫高.wrl  小腿.wrl  底板.SLDPRT  底板.wrl  车轮.wrl
SW/foc/: 2804电机.SLDPRT  2804电机.wrl  4010电机.wrl  endwheel34.SLDPRT  largearm2.SLDPRT  mainbody.SLDPRT  大腿.SLDPRT  大腿.wrl  大腿垫高.wrl  小腿.SLDPRT  小腿.wrl  底板.wrl  车轮.SLDPRT  车轮.wrl  轮胎.SLDPRT  轮胎.wrl
SW/foc_urdf/Ass 1.1/: CMakeLists.txt  package.xml
SW/foc_urdf/Ass 1.1/config/: joint_names_Ass 1.1.yaml
SW/foc_urdf/Ass 1.1/launch/: display.launch  gazebo.launch
SW/foc_urdf/Ass 1.1/meshes/: base_link.STL  big1.STL  big2.STL  big3.STL  big4.STL  small1.STL  small2.STL  small3.STL  small4.STL  tire12.STL  tire34.STL
SW/foc_urdf/Ass 1.1/urdf/: Ass 1.1.csv  Ass 1.1.urdf
SW/foc_urdf/urdf/: Ass 1.SLDASM  leg 1.SLDPRT  leg 2.SLDPRT  leg 3.SLDPRT  leg 4.SLDPRT  main body.SLDPRT  tire.SLDPRT
SW/foc_urdf/urdf/Ass 1/: CMakeLists.txt  package.xml
SW/foc_urdf/urdf/Ass 1/meshes/: tire.STL  (+10 more)
URDF/: leg3.SLDPRT  leg4.SLDPRT  总装1.SLDASM
URDF/FOC_URDF/: CMakeLists.txt  package.xml
URDF/FOC_URDF/config/: joint_names_FOC_URDF.yaml
URDF/FOC_URDF/launch/: display.launch  gazebo.launch
URDF/FOC_URDF/meshes/: leg12_left.STL  leg1_left.STL  leg1_right.STL  leg23_left.STL  leg43_left.STL  leg43_right.STL  tire_left.STL
URDF/FOC_URDF/urdf/: FOC_URDF.csv  FOC_URDF.urdf
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
devel/.private/balance_robot_controller/: .catkin  .rosinstall  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  setup.fish
devel/.private/foc_urdf/: .catkin  .rosinstall  local_setup.sh  setup.fish  setup.sh
devel/.private/full_balance_control/: .catkin
devel/lib/pkgconfig/: balance_robot_controller.pc  catkin_tools_prebuild.pc  foc_urdf.pc  full_balance_control.pc
devel/share/balance_robot_controller/cmake/: balance_robot_controllerConfig-version.cmake  balance_robot_controllerConfig.cmake
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/foc_urdf/cmake/: foc_urdfConfig-version.cmake  foc_urdfConfig.cmake
devel/share/full_balance_control/cmake/: full_balance_controlConfig-version.cmake  full_balance_controlConfig.cmake
foc_urdf/: FOC_URDF.SLDASM
foc_urdf/foc_urdf_new/: CMakeLists.txt  package.xml
foc_urdf/foc_urdf_new/config/: joint_names_foc_urdf_new.yaml
foc_urdf/foc_urdf_new/launch/: display.launch  gazebo.launch
foc_urdf/foc_urdf_new/meshes/: base_link.STL  leg01_left.STL  leg01_right.STL  leg04_left.STL  leg04_right.STL  leg12_left.STL  leg12_right.STL  leg43_left.STL  leg43_right.STL  tire_left.STL  tire_right.STL
foc_urdf/foc_urdf_new/urdf/: foc_urdf_new.csv  foc_urdf_new.urdf
foc_urdf/foc_urdf_transmission/urdf/: your_robot.sdf
logs/full_balance_control/: build.make.002.log.stderr  build.make.004.log.stderr
lqr_controller/: CMakeLists.txt  README.md  package.xml
lqr_controller/config/: controller_params.yaml  controllers.yaml  rosconsole.config
lqr_controller/include/lqr_controller/: lqr_controller.h  vmc_interface.h
lqr_controller/launch/: foc_balance_control.launch  lqr_controller.launch  lqr_vmc_controller.launch  lqr_vmc_gazebo.launch
lqr_controller/scripts/: test_controller.py  test_gazebo_controller.py
lqr_controller/src/: lqr_controller.cpp  lqr_controller_node.cpp  vmc_interface.cpp
matlab/: VMC.m  dynamics_beta_version.m  leg_conv.m  leg_func_calc.m  leg_pos.m  leg_spd.m
matlab_simulation/: README.md  README_en.md  a.slx  leg_conv.m  leg_func_calc.m  leg_pos.m  leg_spd.m  lqr_k.m  sys_calc.m  sys_sim.slx  sys_sim_3d.slx
src/balance_robo_controller/: CMakeLists.txt  balance_robot_controller_plugin.xml
src/balance_robo_controller/config/: controller.yaml
src/balance_robo_controller/include/: leg_conv.h  leg_pos.h  leg_spd.h  lqr_k.h  pid.h
src/balance_robo_controller/launch/: balance_robot.launch
src/balance_robo_controller/src/: balance_robot_controller.cpp  leg_conv.cpp  leg_pos.cpp  leg_spd.cpp  lqr_k.cpp  pid.cpp
src/full_balance_control/: CMakeLists.txt  package.xml  plugin_description.xml
src/full_balance_control/config/: full_balance_control.yaml
src/full_balance_control/include/full_balance_control/: FullBalanceController.hpp
src/full_balance_control/launch/: full_balance_control.launch
src/full_balance_control/src/: FullBalanceController.cpp
src/urdf/foc_urdf_transmission/: package.xml
src/urdf/foc_urdf_transmission/config/: controllers.yaml  joint_names_foc_urdf.yaml
src/urdf/foc_urdf_transmission/launch/: gazebo_urdf.launch
urdf/foc_urdf_transmission/: CMakeLists.txt
urdf/foc_urdf_transmission/config/: controllers.yaml
urdf/foc_urdf_transmission/launch/: gazebo_control.launch
urdf/foc_urdf_transmission/meshes/: leg12_left.STL  leg23_left.STL
urdf/foc_urdf_transmission/urdf/: foc_urdf.urdf
urdf_lowercase/foc_urdf/meshes/: base_link.STL  leg01_left.STL  leg04_left.STL  leg04_right.STL  leg12_left.STL  leg12_right.STL  leg23_left.STL  leg23_right.STL  leg2_right.STL  leg43_left.STL  leg43_right.STL  leg4_left.STL  tire_left.STL  tire_right.STL
urdf_lowercase/foc_urdf/urdf/: foc_urdf.csv  foc_urdf.urdf
urdf_lowercase/foc_urdf_1/: CMakeLists.txt  package.xml
urdf_lowercase/foc_urdf_1/config/: joint_names_foc_urdf_1.yaml
urdf_lowercase/foc_urdf_1/launch/: display.launch  gazebo.launch
urdf_lowercase/foc_urdf_1/meshes/: leg01_left.STL  leg04_left.STL  leg12_left.STL  leg12_right.STL  leg23_left.STL  leg23_right.STL  leg43_left.STL  leg43_right.STL  tire_left.STL
urdf_lowercase/foc_urdf_1/urdf/: foc_urdf_1.csv  foc_urdf_1.urdf
urdf_lowercase/foc_urdf_transmission/launch/: gazebo_sdf.launch
urdf_lowercase/foc_urdf_transmission/meshes/: leg1_right.STL
urdf_lowercase/foc_urdf_transmission/urdf/: foc_urdf.csv  foc_urdf.urdf
(+20 files in other folders)
